# serverbottleneck-analyzer

./: .gitignore  README.md  changelog.md  fixture-structure.md  pyproject.toml
config/: notifications.example.json
docs/: fixture-structure.md  label_meaning_and_actions.md  milestones.md
scripts/: install_sba_link.sh  list_5xx.py  run_collector.sh  sba  send_notifications.sh  serverbottleneck_menu.py  summarize_reports.py  summarize_storage.py
src/serverbottleneck/: __init__.py  analyzer.py  cli.py  discovery.py  models.py  notifications.py  parsers.py  reporting.py  storage.py  storage_reporting.py  system_snapshot.py  wp_enrichment.py
