[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "serverbottleneck"
version = "0.1.0"
description = "Hourly Cloudways-style WordPress pressure analyzer"
requires-python = ">=3.9"

[project.scripts]
serverbottleneck = "serverbottleneck.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
